<resources>
    <string name="app_name">BMICalculator</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="bmi_title_image">BMI Title Image</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="age">Age</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="calculate">CALCULATE</string>
</resources>