<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.ddc.bmicalculator.User" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/bmi_title_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bmi_calculator"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <RadioGroup
        android:id="@+id/rbGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/bmiTextView">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:padding="10dp"
            android:layout_margin="10dp"
            />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:padding="10dp"
            android:layout_margin="10dp"
            />

    </RadioGroup>

    <EditText
        android:id="@+id/etAge"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/age"
        android:text = "@{user.age}"
        android:textColorHint="#717171"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/rbGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/llFeetInches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/etAge">

        <EditText
            android:id="@+id/etFeet"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/feet"
            android:textColorHint="#717171"
            android:importantForAutofill="no"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/etInches"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/inches"
            android:textColorHint="#717171"
            android:importantForAutofill="no"
            android:gravity="center"
            />

    </LinearLayout>

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:inputType="numberDecimal"
        android:hint="@string/weight"
        android:textColorHint="#717171"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@id/llFeetInches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvResult"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_margin="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>